21 Jan 2018
update: trivia questions
fix: undefined vars in staffpanel.php
remove: log queries from staff panel
fix: anonymous username in popups
remove: log queries
update: adminer.php 4.4.0
update: check if vaiable is set before counting
update: missing expire time in site_config
update: details.php
merge: userstatus_ and user_status_ caches
update: snatched_staff.php remove duplicated text
fix: show/hide userdetails torrent blocks, should be closed at start
remove: redundant cache user_stats_
remove: redundant cache userstats_
fix: undefined var in news block
fix: incorrect sql erro log path
fix: countables
update: signup errors redirect, previous form data intact
update: install info
add: apikey for future api access
update: torrent_pass, auth to 64 characters
update: tables.css to work same with table inside table
fix: userdetails table blocks

20 Jan 2018
update: install tooltips

19 Jan 2018
update: set file permissions of .env, config.php and ann_config.php during install
update: installer check writeable root
update: user_unlocks.php to same style as the other block pages
add: option to disable/enable newsrss feeds
add: missing admin 'Show Friends' block

18 Jan 2018
fix: edit wiki article
fix: logout salt
fix: blackjack
update: index news block
update: wiki.php

17 Jan 2018
remove: double page load details.php just to increment hits
update: set poster in db from book cache
add: set ebook poster(in cache) to google book poster, if poster not set
add: isbn column to torrents for better search results from google
update: admin categories
add: book info from google books api, with or without api key
remove: unused columns from categories table
update: database files
add: list of anonymous names
replace: 'Anonymous' with anonymous name
add: auth key
update: BOT upload to use auth key

16 Jan 2018
update: site config: auto confirm = yes, confirm email = no
add: missing trivia questions

15 Jan 2018
update: install database
update: karma cleanup
move: cleanup