@@ -1,3 +1,6 @@
+22 Jan 2018
+update: comment.php
+
 21 Jan 2018
 update: trivia questions
 fix: undefined vars in staffpanel.php
